benefits clean up desktop

--- a/development/index.html
+++ b/development/index.html
@@ -375,16 +375,16 @@
         </section>
         <section class="benefits container container--wide">
             <div class="benefits__navigation">
-                <h2 class="benefits__heading">
+                <h2 class="benefits__heading title">
                     Benefits for
                 </h2>
                 <div class="benefits__tabs">
-                    <button class="benefits__tag" type="button">Distributor and Manufacturer</button>
+                    <button class="benefits__tag benefits__tag--current" type="button">Distributor and Manufacturer</button>
                     <button class="benefits__tag" type="button">Dealer and Seller</button>
                 </div>
             </div>
             <div class="benefits__body">
-                <div class="benefits__item benefits__item--for-distributor-manufacturer">
+                <div class="benefits__item benefits__item--for-distributor-manufacturer benefits__item--current">
                     <div class="benefits__screen benefits__screen--aspect">
                         <div class="benefits__summary">
                             <ul class="benefits__features list list--white">
