--- a/development/index.html
+++ b/development/index.html
@@ -439,7 +439,9 @@
 
 
         <!-- Outline.js -->
+        <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
+        <script src="scripts/_benefits.js"></script>
 
     </body>
 </html>
