clean up benefits navigation and animation

--- a/development/index.html
+++ b/development/index.html
@@ -376,7 +376,7 @@
         <section class="benefits container container--wide">
             <div class="benefits__navigation">
                 <h2 class="benefits__heading title">
-                    Benefits for
+                    Benefits&nbsp;for
                 </h2>
                 <div class="benefits__tabs">
                     <button class="benefits__tag benefits__tag--current" type="button">Distributor and Manufacturer</button>
