--- a/production/index.html
+++ b/production/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Index</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1689080835">
-        <link rel="stylesheet" href="styles/style.css?1689080835">
+        <link rel="stylesheet" href="fonts/fonts.css?1689143636">
+        <link rel="stylesheet" href="styles/style.css?1689143636">
     </head>
     <body>
 
@@ -151,7 +151,7 @@
                     Multiple suppliers catalogs usage
                 </h2>
                 <div class="catalog__body">
-                    <video class="catalog__illustration" poster="content/catalog@2x.jpg" width="466" autoplay muted playsinline loop>
+                    <video class="catalog__illustration" poster="content/catalog@2x.jpg" width="466" preload="auto" autoplay muted playsinline loop>
                         <source src="content/catalog.mp4" type="video/mp4">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
@@ -331,6 +331,103 @@
                 </div>
             </div>
         </section>
+        <section class="cta">
+            <div class="cta__wrap container">
+                <h2 class="cta__heading title">
+                    Form your catalog<br class="desktop-only"> and start selling right&nbsp;now
+                </h2>
+                <a class="cta__submit button button--inverted" href="#">
+                    Book a demo
+                </a>
+                <div class="cta__note">
+                    start for free
+                </div>
+                <div class="cta__preview">
+                    <a class="cta__thumb" href="#"><!-- может быть некликабельным дивом -->
+                        <img class="cta__screenshot"
+                             srcset="temp/cta-screenshot-secondary-a@2x.jpg 2x"
+                             src="temp/cta-screenshot-secondary-a.jpg"
+                             width="486"
+                             height="356"
+                             alt=""
+                        >
+                    </a>
+                    <a class="cta__thumb cta__thumb--primary" href="#"><!-- может быть некликабельным дивом -->
+                        <img class="cta__screenshot"
+                             srcset="temp/cta-screenshot-primary@2x.jpg 2x"
+                             src="temp/cta-screenshot-primary.jpg"
+                             width="584"
+                             height="428"
+                             alt=""
+                        >
+                    </a>
+                    <a class="cta__thumb" href="#"><!-- может быть некликабельным дивом -->
+                        <img class="cta__screenshot"
+                             srcset="temp/cta-screenshot-secondary-b@2x.jpg 2x"
+                             src="temp/cta-screenshot-secondary-b.jpg"
+                             width="486"
+                             height="356"
+                             alt=""
+                        >
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section class="benefits container container--wide">
+            <div class="benefits__navigation">
+                <h2 class="benefits__heading title">
+                    Benefits&nbsp;for
+                </h2>
+                <div class="benefits__tabs">
+                    <button class="benefits__tag benefits__tag--current" type="button">Distributor and Manufacturer</button>
+                    <button class="benefits__tag" type="button">Dealer and Seller</button>
+                </div>
+            </div>
+            <div class="benefits__body">
+                <div class="benefits__item benefits__item--for-distributor-manufacturer benefits__item--current">
+                    <div class="benefits__screen benefits__screen--aspect">
+                        <div class="benefits__summary">
+                            <ul class="benefits__features list list--white">
+                                <li class="list__item">Effortlessly distribute personalised data and promotions throughout the dealer chain.</li>
+                                <li class="list__item">Boost advertisements effectiveness with instant updates.</li>
+                                <li class="list__item">Simplify the promotion of high-value goods by sharing sales pitches and unique selling propositions.</li>
+                                <li class="list__item">Reduce salespeople's dependency on their technical skills by offering customers direct chat access to a technical expert along with the product.</li>
+                                <li class="list__item">Feel the market: get seamless product usage statistics inside the dealer chain.</li>
+                                <li class="list__item">Support dealers with effective enterprise sales tools they can't launch themselves.</li>
+                            </ul>
+                        </div>
+                        <img class="benefits__screenshot"
+                             srcset="content/benefits-screenshot-a@2x.jpg 2x"
+                             src="content/benefits-screenshot-a.jpg"
+                             width="622"
+                             height="466"
+                             alt=""
+                        >
+                    </div>
+                </div>
+                <div class="benefits__item benefits__item--for-dealer-and-seller">
+                    <div class="benefits__screen benefits__screen--alternate">
+                        <div class="benefits__summary">
+                            <ul class="benefits__features list">
+                                <li class="list__item">Have a central source of always actual product data. No need to duplicate supplier’s product data and worry about it being updated.</li>
+                                <li class="list__item">Use built-in sales and quotation tools based on ready-to sell suppliers catalogs</li>
+                                <li class="list__item">Start working with new suppliers faster and more efficiently with no data parsing</li>
+                                <li class="list__item">Demonstrate product knowledge using sales pitches and experts provided by the suppliers</li>
+                                <li class="list__item">Accept payments, generate invoices, and sign contracts quickly and easily.</li>
+                                <li class="list__item">Effortlessly distribute many suppliers products to sub-dealers, bypassing content management.</li>
+                            </ul>
+                        </div>
+                        <img class="benefits__screenshot"
+                             srcset="content/benefits-screenshot-b@2x.png 2x"
+                             src="content/benefits-screenshot-b.png"
+                             width="622"
+                             height="466"
+                             alt=""
+                        >
+                    </div>
+                </div>
+            </div>
+        </section>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi commodi consequatur consequuntur culpa deleniti dolorum eos esse eveniet facilis ipsum maxime necessitatibus nobis, praesentium quibusdam quisquam quos rerum saepe sed ullam vel vero vitae voluptates. Delectus doloribus in nesciunt perspiciatis quia. Consequatur corporis cum debitis dignissimos distinctio explicabo odio pariatur quam quo, similique. At deleniti dolor molestiae mollitia, quis repellat suscipit vero! Ad alias animi assumenda consequatur deleniti dignissimos dolorem doloremque doloribus est fuga iste maiores maxime, minima nemo nulla omnis optio perferendis porro quam quas quisquam, quos recusandae reiciendis repellat similique suscipit vero voluptas! Animi distinctio error et facere facilis laboriosam laudantium perferendis quis, recusandae repudiandae, soluta sunt tenetur, vitae voluptas voluptatum! Adipisci culpa dicta dolore dolorem ea, expedita natus non suscipit vel vitae! Accusantium, cum deserunt dignissimos doloribus ducimus explicabo hic laborum laudantium, numquam obcaecati odio placeat sint soluta suscipit velit! Ab aperiam architecto aspernatur commodi consectetur cumque deleniti deserunt dolorem doloribus dolorum, ea eligendi est, eveniet expedita explicabo harum impedit ipsam iusto laudantium libero minima nobis nostrum obcaecati officia officiis placeat porro quaerat quasi quisquam quos, repellat rerum saepe soluta suscipit tenetur totam vitae! Adipisci cum cumque cupiditate dicta doloribus est expedita illo inventore minus modi mollitia nam nemo nihil perspiciatis quibusdam quo reprehenderit rerum, sint ullam voluptatum! Molestias nemo sapiente similique! Accusantium aliquam, aliquid doloribus eaque eligendi eos fuga incidunt, itaque magnam mollitia, nam qui quia tenetur! Aliquid beatae cupiditate debitis, enim explicabo facilis inventore ipsum labore non obcaecati praesentium quam quia quidem similique voluptatem, voluptates voluptatum! Cumque cupiditate est minima modi molestias nihil perferendis quam vel. Atque consectetur consequatur, dolorum esse explicabo maxime minima sint temporibus unde voluptatum! Ad aliquid, consectetur est expedita fugiat illo inventore minima necessitatibus officiis porro quis quo, quos sapiente sint veniam vero voluptatibus. Atque est ex hic id necessitatibus quasi qui similique sint tempore. Adipisci amet architecto dolor dolore dolorem eaque earum esse est eveniet harum impedit in, incidunt iste iusto labore nihil nostrum officia pariatur perferendis perspiciatis quae qui quo sed temporibus tenetur vel velit. Ab aliquam assumenda, blanditiis commodi consequuntur debitis et illum in minima molestiae nemo neque nesciunt nobis nulla officia placeat quae quidem rem, tempore voluptatem? Eos eum ex, explicabo facilis fuga hic incidunt iste magnam neque nesciunt nostrum reiciendis repellat sunt tenetur unde ut velit, voluptatem voluptatum. Aperiam beatae consequuntur cum dignissimos earum eligendi exercitationem illo laborum minima minus nulla numquam quae quam quod recusandae, rem repellat saepe unde ut voluptas! Adipisci in libero officiis reiciendis. Assumenda cum, eaque illo illum impedit inventore laborum officiis quae quasi reprehenderit sequi, similique, sint unde voluptates voluptatum! Blanditiis expedita laborum nisi officiis similique. Adipisci aliquam architecto asperiores, blanditiis consequuntur debitis dolores eveniet expedita iste molestias neque nulla porro quisquam quos reiciendis reprehenderit sunt vero voluptatum? Accusamus, amet blanditiis culpa cum cumque dolorem doloremque ea eum modi neque, nisi obcaecati omnis quam quidem quisquam, rem sequi voluptas. Architecto assumenda aut beatae corporis dolorum eos esse ex maxime molestiae, molestias non nostrum optio porro quibusdam saepe soluta ullam voluptas!
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi commodi consequatur consequuntur culpa deleniti dolorum eos esse eveniet facilis ipsum maxime necessitatibus nobis, praesentium quibusdam quisquam quos rerum saepe sed ullam vel vero vitae voluptates. Delectus doloribus in nesciunt perspiciatis quia. Consequatur corporis cum debitis dignissimos distinctio explicabo odio pariatur quam quo, similique. At deleniti dolor molestiae mollitia, quis repellat suscipit vero! Ad alias animi assumenda consequatur deleniti dignissimos dolorem doloremque doloribus est fuga iste maiores maxime, minima nemo nulla omnis optio perferendis porro quam quas quisquam, quos recusandae reiciendis repellat similique suscipit vero voluptas! Animi distinctio error et facere facilis laboriosam laudantium perferendis quis, recusandae repudiandae, soluta sunt tenetur, vitae voluptas voluptatum! Adipisci culpa dicta dolore dolorem ea, expedita natus non suscipit vel vitae! Accusantium, cum deserunt dignissimos doloribus ducimus explicabo hic laborum laudantium, numquam obcaecati odio placeat sint soluta suscipit velit! Ab aperiam architecto aspernatur commodi consectetur cumque deleniti deserunt dolorem doloribus dolorum, ea eligendi est, eveniet expedita explicabo harum impedit ipsam iusto laudantium libero minima nobis nostrum obcaecati officia officiis placeat porro quaerat quasi quisquam quos, repellat rerum saepe soluta suscipit tenetur totam vitae! Adipisci cum cumque cupiditate dicta doloribus est expedita illo inventore minus modi mollitia nam nemo nihil perspiciatis quibusdam quo reprehenderit rerum, sint ullam voluptatum! Molestias nemo sapiente similique! Accusantium aliquam, aliquid doloribus eaque eligendi eos fuga incidunt, itaque magnam mollitia, nam qui quia tenetur! Aliquid beatae cupiditate debitis, enim explicabo facilis inventore ipsum labore non obcaecati praesentium quam quia quidem similique voluptatem, voluptates voluptatum! Cumque cupiditate est minima modi molestias nihil perferendis quam vel. Atque consectetur consequatur, dolorum esse explicabo maxime minima sint temporibus unde voluptatum! Ad aliquid, consectetur est expedita fugiat illo inventore minima necessitatibus officiis porro quis quo, quos sapiente sint veniam vero voluptatibus. Atque est ex hic id necessitatibus quasi qui similique sint tempore. Adipisci amet architecto dolor dolore dolorem eaque earum esse est eveniet harum impedit in, incidunt iste iusto labore nihil nostrum officia pariatur perferendis perspiciatis quae qui quo sed temporibus tenetur vel velit. Ab aliquam assumenda, blanditiis commodi consequuntur debitis et illum in minima molestiae nemo neque nesciunt nobis nulla officia placeat quae quidem rem, tempore voluptatem? Eos eum ex, explicabo facilis fuga hic incidunt iste magnam neque nesciunt nostrum reiciendis repellat sunt tenetur unde ut velit, voluptatem voluptatum. Aperiam beatae consequuntur cum dignissimos earum eligendi exercitationem illo laborum minima minus nulla numquam quae quam quod recusandae, rem repellat saepe unde ut voluptas! Adipisci in libero officiis reiciendis. Assumenda cum, eaque illo illum impedit inventore laborum officiis quae quasi reprehenderit sequi, similique, sint unde voluptates voluptatum! Blanditiis expedita laborum nisi officiis similique. Adipisci aliquam architecto asperiores, blanditiis consequuntur debitis dolores eveniet expedita iste molestias neque nulla porro quisquam quos reiciendis reprehenderit sunt vero voluptatum? Accusamus, amet blanditiis culpa cum cumque dolorem doloremque ea eum modi neque, nisi obcaecati omnis quam quidem quisquam, rem sequi voluptas. Architecto assumenda aut beatae corporis dolorum eos esse ex maxime molestiae, molestias non nostrum optio porro quibusdam saepe soluta ullam voluptas!
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi commodi consequatur consequuntur culpa deleniti dolorum eos esse eveniet facilis ipsum maxime necessitatibus nobis, praesentium quibusdam quisquam quos rerum saepe sed ullam vel vero vitae voluptates. Delectus doloribus in nesciunt perspiciatis quia. Consequatur corporis cum debitis dignissimos distinctio explicabo odio pariatur quam quo, similique. At deleniti dolor molestiae mollitia, quis repellat suscipit vero! Ad alias animi assumenda consequatur deleniti dignissimos dolorem doloremque doloribus est fuga iste maiores maxime, minima nemo nulla omnis optio perferendis porro quam quas quisquam, quos recusandae reiciendis repellat similique suscipit vero voluptas! Animi distinctio error et facere facilis laboriosam laudantium perferendis quis, recusandae repudiandae, soluta sunt tenetur, vitae voluptas voluptatum! Adipisci culpa dicta dolore dolorem ea, expedita natus non suscipit vel vitae! Accusantium, cum deserunt dignissimos doloribus ducimus explicabo hic laborum laudantium, numquam obcaecati odio placeat sint soluta suscipit velit! Ab aperiam architecto aspernatur commodi consectetur cumque deleniti deserunt dolorem doloribus dolorum, ea eligendi est, eveniet expedita explicabo harum impedit ipsam iusto laudantium libero minima nobis nostrum obcaecati officia officiis placeat porro quaerat quasi quisquam quos, repellat rerum saepe soluta suscipit tenetur totam vitae! Adipisci cum cumque cupiditate dicta doloribus est expedita illo inventore minus modi mollitia nam nemo nihil perspiciatis quibusdam quo reprehenderit rerum, sint ullam voluptatum! Molestias nemo sapiente similique! Accusantium aliquam, aliquid doloribus eaque eligendi eos fuga incidunt, itaque magnam mollitia, nam qui quia tenetur! Aliquid beatae cupiditate debitis, enim explicabo facilis inventore ipsum labore non obcaecati praesentium quam quia quidem similique voluptatem, voluptates voluptatum! Cumque cupiditate est minima modi molestias nihil perferendis quam vel. Atque consectetur consequatur, dolorum esse explicabo maxime minima sint temporibus unde voluptatum! Ad aliquid, consectetur est expedita fugiat illo inventore minima necessitatibus officiis porro quis quo, quos sapiente sint veniam vero voluptatibus. Atque est ex hic id necessitatibus quasi qui similique sint tempore. Adipisci amet architecto dolor dolore dolorem eaque earum esse est eveniet harum impedit in, incidunt iste iusto labore nihil nostrum officia pariatur perferendis perspiciatis quae qui quo sed temporibus tenetur vel velit. Ab aliquam assumenda, blanditiis commodi consequuntur debitis et illum in minima molestiae nemo neque nesciunt nobis nulla officia placeat quae quidem rem, tempore voluptatem? Eos eum ex, explicabo facilis fuga hic incidunt iste magnam neque nesciunt nostrum reiciendis repellat sunt tenetur unde ut velit, voluptatem voluptatum. Aperiam beatae consequuntur cum dignissimos earum eligendi exercitationem illo laborum minima minus nulla numquam quae quam quod recusandae, rem repellat saepe unde ut voluptas! Adipisci in libero officiis reiciendis. Assumenda cum, eaque illo illum impedit inventore laborum officiis quae quasi reprehenderit sequi, similique, sint unde voluptates voluptatum! Blanditiis expedita laborum nisi officiis similique. Adipisci aliquam architecto asperiores, blanditiis consequuntur debitis dolores eveniet expedita iste molestias neque nulla porro quisquam quos reiciendis reprehenderit sunt vero voluptatum? Accusamus, amet blanditiis culpa cum cumque dolorem doloremque ea eum modi neque, nisi obcaecati omnis quam quidem quisquam, rem sequi voluptas. Architecto assumenda aut beatae corporis dolorum eos esse ex maxime molestiae, molestias non nostrum optio porro quibusdam saepe soluta ullam voluptas!
@@ -342,7 +439,9 @@
 
 
         <!-- Outline.js -->
+        <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
+        <script src="scripts/_benefits.js?1689143636"></script>
 
     </body>
 </html>
