--- a/development/index.html
+++ b/development/index.html
@@ -152,7 +152,8 @@
                 </h2>
                 <div class="catalog__body">
                     <video class="catalog__illustration" poster="content/catalog@2x.jpg" width="466" preload="auto" autoplay muted playsinline loop>
-                        <source src="content/catalog.mp4" type="video/mp4">
+                        <source src="content/catalog.webm" type="video/webm">
+<!--                        <source src="content/catalog.mp4" type="video/mp4">-->
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
                              width="466"
