--- a/production/index.html
+++ b/production/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Index</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1689144042">
-        <link rel="stylesheet" href="styles/style.css?1689144042">
+        <link rel="stylesheet" href="fonts/fonts.css?1689158377">
+        <link rel="stylesheet" href="styles/style.css?1689158377">
     </head>
     <body>
 
@@ -152,7 +152,8 @@
                 </h2>
                 <div class="catalog__body">
                     <video class="catalog__illustration" poster="content/catalog@2x.jpg" width="466" preload="auto" autoplay muted playsinline loop>
-                        <source src="content/catalog.mp4" type="video/mp4">
+                        <source src="content/catalog.webm" type="video/webm">
+<!--                        <source src="content/catalog.mp4" type="video/mp4">-->
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
                              width="466"
@@ -441,7 +442,7 @@
         <!-- Outline.js -->
         <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
-        <script src="scripts/_benefits.js?1689144042"></script>
+        <script src="scripts/_benefits.js?1689158377"></script>
 
     </body>
 </html>
