--- a/development/index.html
+++ b/development/index.html
@@ -429,6 +429,92 @@
                 </div>
             </div>
         </section>
+        <section class="numbers container container--wide">
+            <h2 class="numbers__heading title">
+                Quotalogic in&nbsp;numbers
+            </h2>
+            <div class="numbers__summary">
+                <div class="numbers__tile">
+                    <b class="numbers__stat">
+                        <span class="accent">1</span> minute
+                    </b>
+                    <div class="numbers__description">
+                        Get your first payment in just one minute, without needing to deploy or set up a CMS/PIM
+                    </div>
+                </div>
+                <div class="numbers__tile">
+                    <b class="numbers__stat">
+                        <span class="accent">90%</span> less<br> resources
+                    </b>
+                    <div class="numbers__description">
+                        Less time spent for content management keeping the company's product data and catalogs <span class="nobr">up-to-date</span>
+                    </div>
+                </div>
+                <div class="numbers__tile">
+                    <b class="numbers__stat">
+                        up to <span class="accent">+40%</span><br> increase in sales
+                    </b>
+                    <div class="numbers__description">
+                        Quotalogic eliminates data bottlenecks for quotation software when working with multiple vendors
+                    </div>
+                </div>
+            </div>
+            <div class="numbers__data">
+                <h3 class="numbers__sub-heading title">
+                    More cool<br class="smartphone-only"> numbers
+                </h3>
+                <div class="numbers__list">
+                    <div class="numbers__item">
+                        <div class="numbers__value">
+                            <span class="numbers__percent">49%</span>
+                            <span class="numbers__unit">increase in proposal volume</span>
+                        </div>
+                        <div class="numbers__progress numbers__progress--alternate" role="presentation" aria-hidden="true" style="width: 47.5%;"></div>
+                        <div class="numbers__progress numbers__progress--accent" role="presentation" aria-hidden="true" style="width: 71.1363%;"></div>
+                    </div>
+                    <div class="numbers__item">
+                        <div class="numbers__value">
+                            <span class="numbers__percent">27%</span>
+                            <span class="numbers__unit">shorter sales cycles</span>
+                        </div>
+                        <div class="numbers__progress numbers__progress--alternate" role="presentation" aria-hidden="true" style="width: 47.5%;"></div>
+                        <div class="numbers__progress numbers__progress--accent" role="presentation" aria-hidden="true" style="width: 35.4545%;"></div>
+                    </div>
+                    <div class="numbers__item">
+                        <div class="numbers__value">
+                            <span class="numbers__percent">15%</span>
+                            <span class="numbers__unit">margin growth</span>
+                        </div>
+                        <div class="numbers__progress numbers__progress--alternate" role="presentation" aria-hidden="true" style="width: 47.5%;"></div>
+                        <div class="numbers__progress numbers__progress--accent" role="presentation" aria-hidden="true" style="width: 54.5455%;"></div>
+                    </div>
+                    <div class="numbers__item">
+                        <div class="numbers__value">
+                            <span class="numbers__percent">19%</span>
+                            <span class="numbers__unit">higher lead conversion rates</span>
+                        </div>
+                        <div class="numbers__progress numbers__progress--alternate" role="presentation" aria-hidden="true" style="width: 47.5%;"></div>
+                        <div class="numbers__progress numbers__progress--accent" role="presentation" aria-hidden="true" style="width: 59.0909%;"></div>
+                    </div>
+                    <div class="numbers__item">
+                        <div class="numbers__value">
+                            <span class="numbers__percent">20%</span>
+                            <span class="numbers__unit">increase in product<br class="desktop-only"> knowledge demonstration</span>
+                        </div>
+                        <div class="numbers__progress numbers__progress--alternate" role="presentation" aria-hidden="true" style="width: 47.5%;"></div>
+                        <div class="numbers__progress numbers__progress--accent" role="presentation" aria-hidden="true" style="width: 64.5454%;"></div>
+                    </div>
+                    <div class="numbers__item">
+                        <div class="numbers__value">
+                            <span class="numbers__percent">78%</span>
+                            <span class="numbers__unit">faster response times<br class="desktop-only"> to customers</span>
+                        </div>
+                        <div class="numbers__progress numbers__progress--alternate" role="presentation" aria-hidden="true" style="width: 47.5%;"></div>
+                        <div class="numbers__progress numbers__progress--accent" role="presentation" aria-hidden="true" style="width: 85.45454%;"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi commodi consequatur consequuntur culpa deleniti dolorum eos esse eveniet facilis ipsum maxime necessitatibus nobis, praesentium quibusdam quisquam quos rerum saepe sed ullam vel vero vitae voluptates. Delectus doloribus in nesciunt perspiciatis quia. Consequatur corporis cum debitis dignissimos distinctio explicabo odio pariatur quam quo, similique. At deleniti dolor molestiae mollitia, quis repellat suscipit vero! Ad alias animi assumenda consequatur deleniti dignissimos dolorem doloremque doloribus est fuga iste maiores maxime, minima nemo nulla omnis optio perferendis porro quam quas quisquam, quos recusandae reiciendis repellat similique suscipit vero voluptas! Animi distinctio error et facere facilis laboriosam laudantium perferendis quis, recusandae repudiandae, soluta sunt tenetur, vitae voluptas voluptatum! Adipisci culpa dicta dolore dolorem ea, expedita natus non suscipit vel vitae! Accusantium, cum deserunt dignissimos doloribus ducimus explicabo hic laborum laudantium, numquam obcaecati odio placeat sint soluta suscipit velit! Ab aperiam architecto aspernatur commodi consectetur cumque deleniti deserunt dolorem doloribus dolorum, ea eligendi est, eveniet expedita explicabo harum impedit ipsam iusto laudantium libero minima nobis nostrum obcaecati officia officiis placeat porro quaerat quasi quisquam quos, repellat rerum saepe soluta suscipit tenetur totam vitae! Adipisci cum cumque cupiditate dicta doloribus est expedita illo inventore minus modi mollitia nam nemo nihil perspiciatis quibusdam quo reprehenderit rerum, sint ullam voluptatum! Molestias nemo sapiente similique! Accusantium aliquam, aliquid doloribus eaque eligendi eos fuga incidunt, itaque magnam mollitia, nam qui quia tenetur! Aliquid beatae cupiditate debitis, enim explicabo facilis inventore ipsum labore non obcaecati praesentium quam quia quidem similique voluptatem, voluptates voluptatum! Cumque cupiditate est minima modi molestias nihil perferendis quam vel. Atque consectetur consequatur, dolorum esse explicabo maxime minima sint temporibus unde voluptatum! Ad aliquid, consectetur est expedita fugiat illo inventore minima necessitatibus officiis porro quis quo, quos sapiente sint veniam vero voluptatibus. Atque est ex hic id necessitatibus quasi qui similique sint tempore. Adipisci amet architecto dolor dolore dolorem eaque earum esse est eveniet harum impedit in, incidunt iste iusto labore nihil nostrum officia pariatur perferendis perspiciatis quae qui quo sed temporibus tenetur vel velit. Ab aliquam assumenda, blanditiis commodi consequuntur debitis et illum in minima molestiae nemo neque nesciunt nobis nulla officia placeat quae quidem rem, tempore voluptatem? Eos eum ex, explicabo facilis fuga hic incidunt iste magnam neque nesciunt nostrum reiciendis repellat sunt tenetur unde ut velit, voluptatem voluptatum. Aperiam beatae consequuntur cum dignissimos earum eligendi exercitationem illo laborum minima minus nulla numquam quae quam quod recusandae, rem repellat saepe unde ut voluptas! Adipisci in libero officiis reiciendis. Assumenda cum, eaque illo illum impedit inventore laborum officiis quae quasi reprehenderit sequi, similique, sint unde voluptates voluptatum! Blanditiis expedita laborum nisi officiis similique. Adipisci aliquam architecto asperiores, blanditiis consequuntur debitis dolores eveniet expedita iste molestias neque nulla porro quisquam quos reiciendis reprehenderit sunt vero voluptatum? Accusamus, amet blanditiis culpa cum cumque dolorem doloremque ea eum modi neque, nisi obcaecati omnis quam quidem quisquam, rem sequi voluptas. Architecto assumenda aut beatae corporis dolorum eos esse ex maxime molestiae, molestias non nostrum optio porro quibusdam saepe soluta ullam voluptas!
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi commodi consequatur consequuntur culpa deleniti dolorum eos esse eveniet facilis ipsum maxime necessitatibus nobis, praesentium quibusdam quisquam quos rerum saepe sed ullam vel vero vitae voluptates. Delectus doloribus in nesciunt perspiciatis quia. Consequatur corporis cum debitis dignissimos distinctio explicabo odio pariatur quam quo, similique. At deleniti dolor molestiae mollitia, quis repellat suscipit vero! Ad alias animi assumenda consequatur deleniti dignissimos dolorem doloremque doloribus est fuga iste maiores maxime, minima nemo nulla omnis optio perferendis porro quam quas quisquam, quos recusandae reiciendis repellat similique suscipit vero voluptas! Animi distinctio error et facere facilis laboriosam laudantium perferendis quis, recusandae repudiandae, soluta sunt tenetur, vitae voluptas voluptatum! Adipisci culpa dicta dolore dolorem ea, expedita natus non suscipit vel vitae! Accusantium, cum deserunt dignissimos doloribus ducimus explicabo hic laborum laudantium, numquam obcaecati odio placeat sint soluta suscipit velit! Ab aperiam architecto aspernatur commodi consectetur cumque deleniti deserunt dolorem doloribus dolorum, ea eligendi est, eveniet expedita explicabo harum impedit ipsam iusto laudantium libero minima nobis nostrum obcaecati officia officiis placeat porro quaerat quasi quisquam quos, repellat rerum saepe soluta suscipit tenetur totam vitae! Adipisci cum cumque cupiditate dicta doloribus est expedita illo inventore minus modi mollitia nam nemo nihil perspiciatis quibusdam quo reprehenderit rerum, sint ullam voluptatum! Molestias nemo sapiente similique! Accusantium aliquam, aliquid doloribus eaque eligendi eos fuga incidunt, itaque magnam mollitia, nam qui quia tenetur! Aliquid beatae cupiditate debitis, enim explicabo facilis inventore ipsum labore non obcaecati praesentium quam quia quidem similique voluptatem, voluptates voluptatum! Cumque cupiditate est minima modi molestias nihil perferendis quam vel. Atque consectetur consequatur, dolorum esse explicabo maxime minima sint temporibus unde voluptatum! Ad aliquid, consectetur est expedita fugiat illo inventore minima necessitatibus officiis porro quis quo, quos sapiente sint veniam vero voluptatibus. Atque est ex hic id necessitatibus quasi qui similique sint tempore. Adipisci amet architecto dolor dolore dolorem eaque earum esse est eveniet harum impedit in, incidunt iste iusto labore nihil nostrum officia pariatur perferendis perspiciatis quae qui quo sed temporibus tenetur vel velit. Ab aliquam assumenda, blanditiis commodi consequuntur debitis et illum in minima molestiae nemo neque nesciunt nobis nulla officia placeat quae quidem rem, tempore voluptatem? Eos eum ex, explicabo facilis fuga hic incidunt iste magnam neque nesciunt nostrum reiciendis repellat sunt tenetur unde ut velit, voluptatem voluptatum. Aperiam beatae consequuntur cum dignissimos earum eligendi exercitationem illo laborum minima minus nulla numquam quae quam quod recusandae, rem repellat saepe unde ut voluptas! Adipisci in libero officiis reiciendis. Assumenda cum, eaque illo illum impedit inventore laborum officiis quae quasi reprehenderit sequi, similique, sint unde voluptates voluptatum! Blanditiis expedita laborum nisi officiis similique. Adipisci aliquam architecto asperiores, blanditiis consequuntur debitis dolores eveniet expedita iste molestias neque nulla porro quisquam quos reiciendis reprehenderit sunt vero voluptatum? Accusamus, amet blanditiis culpa cum cumque dolorem doloremque ea eum modi neque, nisi obcaecati omnis quam quidem quisquam, rem sequi voluptas. Architecto assumenda aut beatae corporis dolorum eos esse ex maxime molestiae, molestias non nostrum optio porro quibusdam saepe soluta ullam voluptas!
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi commodi consequatur consequuntur culpa deleniti dolorum eos esse eveniet facilis ipsum maxime necessitatibus nobis, praesentium quibusdam quisquam quos rerum saepe sed ullam vel vero vitae voluptates. Delectus doloribus in nesciunt perspiciatis quia. Consequatur corporis cum debitis dignissimos distinctio explicabo odio pariatur quam quo, similique. At deleniti dolor molestiae mollitia, quis repellat suscipit vero! Ad alias animi assumenda consequatur deleniti dignissimos dolorem doloremque doloribus est fuga iste maiores maxime, minima nemo nulla omnis optio perferendis porro quam quas quisquam, quos recusandae reiciendis repellat similique suscipit vero voluptas! Animi distinctio error et facere facilis laboriosam laudantium perferendis quis, recusandae repudiandae, soluta sunt tenetur, vitae voluptas voluptatum! Adipisci culpa dicta dolore dolorem ea, expedita natus non suscipit vel vitae! Accusantium, cum deserunt dignissimos doloribus ducimus explicabo hic laborum laudantium, numquam obcaecati odio placeat sint soluta suscipit velit! Ab aperiam architecto aspernatur commodi consectetur cumque deleniti deserunt dolorem doloribus dolorum, ea eligendi est, eveniet expedita explicabo harum impedit ipsam iusto laudantium libero minima nobis nostrum obcaecati officia officiis placeat porro quaerat quasi quisquam quos, repellat rerum saepe soluta suscipit tenetur totam vitae! Adipisci cum cumque cupiditate dicta doloribus est expedita illo inventore minus modi mollitia nam nemo nihil perspiciatis quibusdam quo reprehenderit rerum, sint ullam voluptatum! Molestias nemo sapiente similique! Accusantium aliquam, aliquid doloribus eaque eligendi eos fuga incidunt, itaque magnam mollitia, nam qui quia tenetur! Aliquid beatae cupiditate debitis, enim explicabo facilis inventore ipsum labore non obcaecati praesentium quam quia quidem similique voluptatem, voluptates voluptatum! Cumque cupiditate est minima modi molestias nihil perferendis quam vel. Atque consectetur consequatur, dolorum esse explicabo maxime minima sint temporibus unde voluptatum! Ad aliquid, consectetur est expedita fugiat illo inventore minima necessitatibus officiis porro quis quo, quos sapiente sint veniam vero voluptatibus. Atque est ex hic id necessitatibus quasi qui similique sint tempore. Adipisci amet architecto dolor dolore dolorem eaque earum esse est eveniet harum impedit in, incidunt iste iusto labore nihil nostrum officia pariatur perferendis perspiciatis quae qui quo sed temporibus tenetur vel velit. Ab aliquam assumenda, blanditiis commodi consequuntur debitis et illum in minima molestiae nemo neque nesciunt nobis nulla officia placeat quae quidem rem, tempore voluptatem? Eos eum ex, explicabo facilis fuga hic incidunt iste magnam neque nesciunt nostrum reiciendis repellat sunt tenetur unde ut velit, voluptatem voluptatum. Aperiam beatae consequuntur cum dignissimos earum eligendi exercitationem illo laborum minima minus nulla numquam quae quam quod recusandae, rem repellat saepe unde ut voluptas! Adipisci in libero officiis reiciendis. Assumenda cum, eaque illo illum impedit inventore laborum officiis quae quasi reprehenderit sequi, similique, sint unde voluptates voluptatum! Blanditiis expedita laborum nisi officiis similique. Adipisci aliquam architecto asperiores, blanditiis consequuntur debitis dolores eveniet expedita iste molestias neque nulla porro quisquam quos reiciendis reprehenderit sunt vero voluptatum? Accusamus, amet blanditiis culpa cum cumque dolorem doloremque ea eum modi neque, nisi obcaecati omnis quam quidem quisquam, rem sequi voluptas. Architecto assumenda aut beatae corporis dolorum eos esse ex maxime molestiae, molestias non nostrum optio porro quibusdam saepe soluta ullam voluptas!
