--- a/development/index.html
+++ b/development/index.html
@@ -537,7 +537,7 @@
                              srcset="content/feature-meaning@2x.jpg 2x"
                              src="content/feature-meaning.jpg"
                              width="494"
-                             height="222"
+                             height="391"
                              alt=""
                         >
                     </div>
@@ -552,7 +552,7 @@
                 </div>
                 <div class="basics__tile basics__tile--data-model">
                     <h3 class="basics__sub-heading">
-                        Dynamically constructed product data model
+                        Dynamically constructed<br class="desktop-only"> product data model
                     </h3>
                     <div class="basics__text wysiwyg">
                         <p>Product characteristics can be set through dependence (by formulas) on other values or on external factors. As simple as using a spreadsheet, but tailored for sales tasks</p>
@@ -580,7 +580,7 @@
                 </div>
                 <div class="basics__tile basics__tile--dealer-network">
                     <h3 class="basics__sub-heading">
-                        One virtual product for the whole dealer network
+                        One virtual product for the whole<br class="desktop-only"> dealer network
                     </h3>
                     <div class="basics__text wysiwyg">
                         <p>Since the entire network uses one shared foundational product object, when a change occurs in the product details, it's immediately reflected throughout the entire dealer network.</p>
