--- a/development/index.html
+++ b/development/index.html
@@ -151,7 +151,8 @@
                     Multiple suppliers catalogs usage
                 </h2>
                 <div class="catalog__body">
-                    <video class="catalog__illustration" poster="content/catalog@2x.jpg" width="466" preload="auto" autoplay muted playsinline loop>
+                    <!-- poster="content/catalog@2x.jpg" -->
+                    <video class="catalog__illustration" width="466" preload="auto" autoplay muted playsinline loop>
                         <source src="content/catalog.webm" type="video/webm">
 <!--                        <source src="content/catalog.mp4" type="video/mp4">-->
                         <img srcset="content/catalog@2x.jpg 2x"
@@ -567,13 +568,12 @@
                         <p>Dealers can further override and extend these characteristics before resharing with partners.</p>
                         <p>This way, the product core stays consistent while each seller in a chain sees an unique product version.</p>
                     </div>
-                    <video class="basics__omnichanelling-video" poster="content/catalog@2x.jpg" width="466" preload="auto" autoplay muted playsinline loop>
-<!--                        <source src="content/basics-omnichanelling.webm" type="video/webm">-->
-                        <source src="content/basics-omnichanelling.mp4" type="video/mp4">
+                    <video class="basics__omnichanelling-video" preload="auto" autoplay muted playsinline loop>
+                        <source src="content/basics-omnichanelling.webm" type="video/webm">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
                              width="532"
-                             height="399"
+                             height=""
                              alt=""
                         >
                     </video>
