color from screenshot

--- a/production/index.html
+++ b/production/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Index</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1689250730">
-        <link rel="stylesheet" href="styles/style.css?1689250730">
+        <link rel="stylesheet" href="fonts/fonts.css?1689251908">
+        <link rel="stylesheet" href="styles/style.css?1689251908">
     </head>
     <body>
 
@@ -153,8 +153,8 @@
                 <div class="catalog__body">
                     <!-- poster="content/catalog@2x.jpg" -->
                     <video class="catalog__illustration" width="466" preload="auto" autoplay muted playsinline loop>
-                        <source src="content/catalog.webm" type="video/webm">
-<!--                        <source src="content/catalog.mp4" type="video/mp4">-->
+<!--                        <source src="content/catalog.webm" type="video/webm">-->
+                        <source src="content/catalog.mp4" type="video/mp4">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
                              width="466"
@@ -570,6 +570,7 @@
                     </div>
                     <video class="basics__omnichanelling-video" preload="auto" autoplay muted playsinline loop>
                         <source src="content/basics-omnichanelling.webm" type="video/webm">
+                        <source src="content/basics-omnichanelling." type="video/webm">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
                              width="532"
@@ -663,7 +664,7 @@
         <!-- Outline.js -->
         <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
-        <script src="scripts/_benefits.js?1689250730"></script>
+        <script src="scripts/_benefits.js?1689251908"></script>
 
     </body>
 </html>
