--- a/development/index.html
+++ b/development/index.html
@@ -153,8 +153,8 @@
                 <div class="catalog__body">
                     <!-- poster="content/catalog@2x.jpg" -->
                     <video class="catalog__illustration" width="466" preload="auto" autoplay muted playsinline loop>
-                        <source src="content/catalog.webm" type="video/webm">
-<!--                        <source src="content/catalog.mp4" type="video/mp4">-->
+<!--                        <source src="content/catalog.webm" type="video/webm">-->
+                        <source src="content/catalog.mp4" type="video/mp4">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
                              width="466"
@@ -570,6 +570,7 @@
                     </div>
                     <video class="basics__omnichanelling-video" preload="auto" autoplay muted playsinline loop>
                         <source src="content/basics-omnichanelling.webm" type="video/webm">
+                        <source src="content/basics-omnichanelling." type="video/webm">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
                              width="532"
