--- a/development/index.html
+++ b/development/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Both WEBM</title>
+        <title>Both MP4</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="fonts/fonts.css">
         <link rel="stylesheet" href="styles/style.css">
@@ -153,8 +153,8 @@
                 <div class="catalog__body">
                     <!-- poster="content/catalog@2x.jpg" -->
                     <video class="catalog__illustration" width="466" preload="auto" autoplay muted playsinline loop>
-                        <source src="content/catalog.webm" type="video/webm">
-<!--                        <source src="content/catalog.mp4" type="video/mp4">-->
+<!--                        <source src="content/catalog.webm" type="video/webm">-->
+                        <source src="content/catalog.mp4" type="video/mp4">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
                              width="466"
@@ -569,8 +569,8 @@
                         <p>This way, the product core stays consistent while each seller in a chain sees an unique product version.</p>
                     </div>
                     <video class="basics__omnichanelling-video" preload="auto" autoplay muted playsinline loop>
-                        <source src="content/basics-omnichanelling.webm" type="video/webm">
-<!--                        <source src="content/basics-omnichanelling.mp4" type="video/mp4">-->
+<!--                        <source src="content/basics-omnichanelling.webm" type="video/webm">-->
+                        <source src="content/basics-omnichanelling.mp4" type="video/mp4">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
                              width="532"
