--- a/production/index.html
+++ b/production/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Both WEBM</title>
+        <title>Both MP4</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1689252671">
-        <link rel="stylesheet" href="styles/style.css?1689252671">
+        <link rel="stylesheet" href="fonts/fonts.css?1689253416">
+        <link rel="stylesheet" href="styles/style.css?1689253416">
     </head>
     <body>
 
@@ -153,8 +153,8 @@
                 <div class="catalog__body">
                     <!-- poster="content/catalog@2x.jpg" -->
                     <video class="catalog__illustration" width="466" preload="auto" autoplay muted playsinline loop>
-                        <source src="content/catalog.webm" type="video/webm">
-<!--                        <source src="content/catalog.mp4" type="video/mp4">-->
+<!--                        <source src="content/catalog.webm" type="video/webm">-->
+                        <source src="content/catalog.mp4" type="video/mp4">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
                              width="466"
@@ -569,8 +569,8 @@
                         <p>This way, the product core stays consistent while each seller in a chain sees an unique product version.</p>
                     </div>
                     <video class="basics__omnichanelling-video" preload="auto" autoplay muted playsinline loop>
-                        <source src="content/basics-omnichanelling.webm" type="video/webm">
-<!--                        <source src="content/basics-omnichanelling.mp4" type="video/mp4">-->
+<!--                        <source src="content/basics-omnichanelling.webm" type="video/webm">-->
+                        <source src="content/basics-omnichanelling.mp4" type="video/mp4">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
                              width="532"
@@ -661,7 +661,7 @@
         <!-- Outline.js -->
         <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
-        <script src="scripts/_benefits.js?1689252671"></script>
+        <script src="scripts/_benefits.js?1689253416"></script>
 
     </body>
 </html>
