--- a/development/index.html
+++ b/development/index.html
@@ -153,7 +153,7 @@
                 <div class="catalog__body">
                     <!-- poster="content/catalog@2x.jpg" -->
                     <video class="catalog__illustration" width="466" preload="auto" autoplay muted playsinline loop>
-<!--                        <source src="content/catalog.webm" type="video/webm">-->
+                        <source src="content/catalog.webm" type="video/webm">
                         <source src="content/catalog.mp4" type="video/mp4">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
@@ -569,7 +569,7 @@
                         <p>This way, the product core stays consistent while each seller in a chain sees an unique product version.</p>
                     </div>
                     <video class="basics__omnichanelling-video" preload="auto" autoplay muted playsinline loop>
-<!--                        <source src="content/basics-omnichanelling.webm" type="video/webm">-->
+                        <source src="content/basics-omnichanelling.webm" type="video/webm">
                         <source src="content/basics-omnichanelling.mp4" type="video/mp4">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
