--- a/development/index.html
+++ b/development/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Both MP4</title>
+        <title>Both MP4 & WEBM</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="fonts/fonts.css">
         <link rel="stylesheet" href="styles/style.css">
