--- a/production/index.html
+++ b/production/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Both MP4</title>
+        <title>Both MP4 & WEBM</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1689254278">
-        <link rel="stylesheet" href="styles/style.css?1689254278">
+        <link rel="stylesheet" href="fonts/fonts.css?1689254291">
+        <link rel="stylesheet" href="styles/style.css?1689254291">
     </head>
     <body>
 
@@ -661,7 +661,7 @@
         <!-- Outline.js -->
         <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
-        <script src="scripts/_benefits.js?1689254278"></script>
+        <script src="scripts/_benefits.js?1689254291"></script>
 
     </body>
 </html>
