--- a/development/index.html
+++ b/development/index.html
@@ -609,44 +609,46 @@
                 With an innovative approach to data management we create an effective full-fledged workplace for b2b and b2c sales with the toolset of PIM, quoting and price management corresponding to our focus customers group.
             </div>
         </section>
-        <section class="about container container--wide">
-            <div class="about__head">
-                <h2 class="about__heading title">
-                    Quotalogic is
-                </h2>
-            </div>
-            <div class="about__body">
-                <div class="about__section">
-                    <h3 class="about__sub-heading">
-                        One-click access
-                    </h3>
-                    <div class="about__description wysiwyg">
-                        <p>We are speeding up the start-up phase and sales process by enabling one-click access for suppliers products and sales tools</p>
-                    </div>
+        <section class="about">
+            <div class="about__wrap container container--wide">
+                <div class="about__head">
+                    <h2 class="about__heading title">
+                        Quotalogic is
+                    </h2>
                 </div>
-                <div class="about__section">
-                    <h3 class="about__sub-heading">
-                        Big data analysis
-                    </h3>
-                    <div class="about__description wysiwyg">
-                        <p>Examining of product behavior in the dealer network allows the distributor to fully understand product proposition effectiveness and quickly respond to market behavior in real time.</p>
-                        <p>Timely proposition analysis reduce inventory costs by minimizing stock-outs and overstocks.</p>
+                <div class="about__body">
+                    <div class="about__section">
+                        <h3 class="about__sub-heading">
+                            One-click access
+                        </h3>
+                        <div class="about__description wysiwyg">
+                            <p>We are speeding up the start-up phase and sales process by enabling one-click access for suppliers products and sales tools</p>
+                        </div>
                     </div>
-                </div>
-                <div class="about__section">
-                    <h3 class="about__sub-heading">
-                        AI-driven sales
-                    </h3>
-                    <div class="about__description wysiwyg">
-                        <p>Machine learning algorithms help distributors reach optimal pricing and promotion strategies, create product descriptions according to the context and purpose of the offer and generate offers based on customer requests.</p>
+                    <div class="about__section">
+                        <h3 class="about__sub-heading">
+                            Big data analysis
+                        </h3>
+                        <div class="about__description wysiwyg">
+                            <p>Examining of product behavior in the dealer network allows the distributor to fully understand product proposition effectiveness and quickly respond to market behavior in real time.</p>
+                            <p>Timely proposition analysis reduce inventory costs by minimizing stock-outs and overstocks.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="about__section">
-                    <h3 class="about__sub-heading">
-                        Efficiency of seller
-                    </h3>
-                    <div class="about__description wysiwyg">
-                        <p>We assign product info management, price tuning, and sales management tasks based on the roles of each seller in a dealer network. This eliminates duplication of work and reduces the workload of each seller by three times</p>
+                    <div class="about__section">
+                        <h3 class="about__sub-heading">
+                            AI-driven sales
+                        </h3>
+                        <div class="about__description wysiwyg">
+                            <p>Machine learning algorithms help distributors reach optimal pricing and promotion strategies, create product descriptions according to the context and purpose of the offer and generate offers based on customer requests.</p>
+                        </div>
+                    </div>
+                    <div class="about__section">
+                        <h3 class="about__sub-heading">
+                            Efficiency of seller
+                        </h3>
+                        <div class="about__description wysiwyg">
+                            <p>We assign product info management, price tuning, and sales management tasks based on the roles of each seller in a dealer network. This eliminates duplication of work and reduces the workload of each seller by three times</p>
+                        </div>
                     </div>
                 </div>
             </div>
