--- a/development/index.html
+++ b/development/index.html
@@ -658,7 +658,7 @@
                 <thead class="tariffs__section tariffs__section--head">
                     <tr class="tariffs__row">
                         <th class="tariffs__cell">
-                            <h2 class="tariffs__heading title">Tariffs:</h2>
+                            <h2 class="tariffs__heading title">Tariffs<span class="desktop-only">:</span></h2>
                         </th>
                         <th class="tariffs__cell">
                             <div class="plan">
