--- a/development/index.html
+++ b/development/index.html
@@ -940,6 +940,21 @@
                 </tbody>
             </table>
         </div>
+        <section class="selling">
+            <div class="selling__wrap container">
+                <h2 class="selling__heading">
+                    Form your catalog<br class="desktop-only"> and start selling right&nbsp;now
+                </h2>
+                <div class="selling__action shadow">
+                    <a class="button button--alternate" href="#demo">
+                        Book a demo
+                    </a>
+                </div>
+                <div class="selling__note">
+                    start for free
+                </div>
+            </div>
+        </section>
         <footer class="footer">
             <div class="footer__wrap container">
                 <div class="footer__emblem logo logo--inverted">Quotalogic</div>
