--- a/development/index.html
+++ b/development/index.html
@@ -940,17 +940,17 @@
                 </tbody>
             </table>
         </div>
-        <section class="selling">
-            <div class="selling__wrap container">
-                <h2 class="selling__heading">
+        <section class="now">
+            <div class="now__wrap container">
+                <h2 class="now__heading">
                     Form your catalog<br class="desktop-only"> and start selling right&nbsp;now
                 </h2>
-                <div class="selling__action shadow">
+                <div class="now__action shadow">
                     <a class="button button--alternate" href="#demo">
                         Book a demo
                     </a>
                 </div>
-                <div class="selling__note">
+                <div class="now__note">
                     start for free
                 </div>
             </div>
