--- a/development/index.html
+++ b/development/index.html
@@ -956,8 +956,59 @@
             </div>
         </section>
         <footer class="footer">
-            <div class="footer__wrap container">
-                <div class="footer__emblem logo logo--inverted">Quotalogic</div>
+            <div class="footer__wrap container container--wide">
+                <div class="footer__primary">
+                    <div class="footer__summary">
+                        <b class="footer__heading title">
+                            Let’s stay connected
+                        </b>
+                        <div class="footer__slogan">
+                            Get in touch with Quotalogic.<br class="desktop-only">
+                            Call us or email and we'll get back to you as soon as possible!
+                        </div>
+                        <div class="footer__contacts">
+                            <div class="footer__channel">
+                                <div class="footer__param">
+                                    Email
+                                </div>
+                                <a class="footer__value button-alike-link" href="mailto:mail@quotalogic.io">
+                                    <span class="button-alike-link__inline">
+                                        mail@quotalogic.io
+                                    </span>
+                                </a>
+                            </div>
+                            <div class="footer__channel">
+                                <div class="footer__param">
+                                    Phone
+                                </div>
+                                <a class="footer__value button-alike-link button-alike-link--no-hover" href="tel:+358451683959">
+                                    <span class="button-alike-link__inline">
+                                        🇫🇮 +358 45 168 39-59
+                                    </span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer__feedbacks">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi dolorem doloribus enim eos? Amet beatae, consectetur cupiditate dolores eaque eligendi eos eveniet incidunt ipsum magni modi nemo obcaecati officiis omnis, provident quas quia rerum saepe sed similique sint sit temporibus velit. A accusamus ad animi blanditiis consectetur culpa, cum debitis distinctio eligendi enim, est inventore ip
+                    </div>
+                </div>
+                <div class="footer__secondary">
+                    <div class="footer__emblem logo logo--inverted">
+                        Quotalogic
+                    </div>
+                    <div class="footer__menu">
+                        <a class="footer__link button-alike-link" href="#">
+                            <span class="button-alike-link__inline">Privacy Policy</span>
+                        </a>
+                        <a class="footer__link button-alike-link" href="#">
+                            <span class="button-alike-link__inline">Terms of Use</span>
+                        </a>
+                    </div>
+                    <div class="footer__copyright">
+                        © 2023 Quotalogic. All rights reserved
+                    </div>
+                </div>
             </div>
         </footer>
 
