--- a/development/index.html
+++ b/development/index.html
@@ -971,21 +971,25 @@
                                 <div class="footer__param">
                                     Email
                                 </div>
-                                <a class="footer__value button-alike-link" href="mailto:mail@quotalogic.io">
-                                    <span class="button-alike-link__inline">
-                                        mail@quotalogic.io
-                                    </span>
-                                </a>
+                                <div class="footer__value">
+                                    <a class="button-alike-link" href="mailto:mail@quotalogic.io">
+                                        <span class="button-alike-link__inline">
+                                            mail@quotalogic.io
+                                        </span>
+                                    </a>
+                                </div>
                             </div>
                             <div class="footer__channel">
                                 <div class="footer__param">
                                     Phone
                                 </div>
-                                <a class="footer__value button-alike-link button-alike-link--no-hover" href="tel:+358451683959">
-                                    <span class="button-alike-link__inline">
-                                        🇫🇮 +358 45 168 39-59
-                                    </span>
-                                </a>
+                                <div class="footer__value">
+                                    <a class="button-alike-link button-alike-link--no-hover" href="tel:+358451683959">
+                                        <span class="button-alike-link__inline">
+                                            🇫🇮 +358 45 168 39-59
+                                        </span>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -998,12 +1002,16 @@
                         Quotalogic
                     </div>
                     <div class="footer__menu">
-                        <a class="footer__link button-alike-link" href="#">
-                            <span class="button-alike-link__inline">Privacy Policy</span>
-                        </a>
-                        <a class="footer__link button-alike-link" href="#">
-                            <span class="button-alike-link__inline">Terms of Use</span>
-                        </a>
+                        <div class="footer__link">
+                            <a class="button-alike-link" href="#">
+                                <span class="button-alike-link__inline">Privacy Policy</span>
+                            </a>
+                        </div>
+                        <div class="footer__link">
+                            <a class="footer__link button-alike-link" href="#">
+                                <span class="button-alike-link__inline">Terms of Use</span>
+                            </a>
+                        </div>
                     </div>
                     <div class="footer__copyright">
                         © 2023 Quotalogic. All rights reserved
